# uno

./: .gitignore  CMakeLists.txt  Makefile  README.md  UnoConfig.h  UnoConfig.h.in  main.cpp  makefile  uno.h
SFML/sfml-widgets-master/src/Gui/: Menu.hpp  Widget.hpp
SFML/sfml-widgets/demo/: demo.cpp
SFML/sfml-widgets/src/Gui/: TextBox.hpp  Theme.hpp  Widget.cpp  Widget.hpp
classes/: Card.cpp  Card.h  Client.cpp  Client.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Server.cpp  Server.h
src/: Card.cpp  Card.h  Client.cpp  Client.h  Menu.cpp  Menu.h  Player.h  Server.cpp  Server.h  functions.cpp  functions.h  main.cpp
